--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
     "firebase": "^11.5.0",
     "lucide-react": "^0.483.0",
